# karanjakhar

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  DESIGN.md  README.md  adgen.html  archives.html  authors.html  build.py  categories.html  config.yaml  contact.html  duality-of-mind.html  empty-sacrifice.html  feed.xml  finite-vs-infinite-games.html  ideal-state-fallacy.html  index.html  it-takes-courage-but.html  karenizer-i-spent-a-weekend-teaching-an-llm-to-be-unreasonable.html  main.py  making-llm-output-reliable.html  marvix-ai-ambient-scribe.html  notes-on-finding-your-own-way.html  pelicanconf.py  publish.sh  publishconf.py  pyproject.toml  robots.txt  setup.sh  sitemap.xml  synopso.html  tags.html  tasks.py  the-illusion-of-empty-sacrifices-stop-mimicking-idols-the-wrong-way.html
.cursor/rules/: commit.mdc
about/: index.html
author/: karan-jakhar.html
blog/: index.html
blog/adgen/: index.html
category/: blog.html
contact/: index.html
content/: duality-of-mind.md  empty-sacrifice.md  finite-vs-infinite-games.md  ideal-state-fallacy.md  it-takes-courage-but.md
feeds/: all.atom.xml  blog.atom.xml
fuck-the-frontend/: index.html
output/: archives.html  authors.html  custom.css  duality-of-mind.html  finite-vs-infinite-games.html  index.html  it-takes-courage-but.html  tags.html  the-illusion-of-empty-sacrifices-stop-mimicking-idols-the-wrong-way.html
pages/: about.html  fuck-the-frontend.html  whoami.html
scripts/: deploy.sh  new_post.py
static/: frontend-off.css  hero-constellation.js  pygments.css  style.css
whoami/: index.html
(+43 files in other folders)
