[project]
name = "my-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ghp-import>=2.1.0",
    "invoke>=2.2.0",
    "pelican[markdown]>=4.11.0",
]

[tool.uv]
package = false

[tool.ruff]

# Exclude files
extend-exclude = [
    ".ipynb_checkpoints",
    ".vscode",
    "__pycache__",
    "build",
    "*.ipynb"
]

line-length = 100

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = ["I"]
